tests/fixtures/errors/wrong_arity.gcl
// Wrong arity: sqrt expects 1 argument, got 2
param x: Dimensionless = 1.0;
node y: Dimensionless = sqrt(@x, 2.0);
